Add farmer-centric mobile app interface and enhanced visualizations

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,11 +44,13 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="advancedDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-brain me-1"></i>Advanced
+                            <i class="fas fa-cogs me-1"></i>Advanced
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="advancedDropdown">
-                            <li><a class="dropdown-item" href="/credit/prediction">Credit Prediction</a></li>
-                            <li><a class="dropdown-item" href="/mobile/app">Mobile App Demo</a></li>
+                            <li><a class="dropdown-item" href="/visualization">Data Visualization</a></li>
+                            <li><a class="dropdown-item" href="/credit/model">Credit Model</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="/mobile"><i class="fas fa-mobile-alt me-1"></i>Farmer Mobile App</a></li>
                         </ul>
                     </li>
                 </ul>
